--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "quill": "^2.0.3",
         "tailwindcss-primeui": "^0.5.0",
         "vue": "^3.4.34",
-        "vue-router": "^4.4.0"
+        "vue-router": "^4.4.0",
+        "vue3-quill": "^0.3.1"
     },
     "devDependencies": {
         "@primevue/auto-import-resolver": "^4.3.1",
