--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
         "@primevue/themes": "^4.3.9",
-        "chart.js": "3.3.2",
+        "chart.js": "^4.1.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.9",
         "quill": "^2.0.3",
         "tailwindcss-primeui": "^0.5.1",
         "vue": "^3.4.34",
+        "vue-chartjs": "^5.3.2",
         "vue-router": "^4.4.0",
         "vue3-quill": "^0.3.1"
     },
