--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
         "@primevue/themes": "^4.3.9",
+        "axios": "^1.12.2",
         "chart.js": "^4.1.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.9",
