--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "eslint --fix . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@chenfengyuan/vue-qrcode": "^2.0.0",
         "@primeuix/themes": "^1.0.0",
         "@primevue/themes": "^4.3.9",
         "axion": "^0.1.0",
