--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "lint": "eslint --fix . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
-        "@chenfengyuan/vue-qrcode": "^2.0.0",
         "@primeuix/themes": "^1.0.0",
         "@primevue/themes": "^4.3.9",
         "axion": "^0.1.0",
@@ -20,6 +19,7 @@
         "tailwindcss-primeui": "^0.5.1",
         "vue": "^3.4.34",
         "vue-chartjs": "^5.3.2",
+        "vue-qrcode": "^2.2.2",
         "vue-router": "^4.4.0",
         "vue3-quill": "^0.3.1"
     },
