--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
         "chart.js": "^4.1.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.9",
+        "qrcode.vue": "^3.6.0",
         "quill": "^2.0.3",
         "tailwindcss-primeui": "^0.5.1",
         "vue": "^3.4.34",
         "vue-chartjs": "^5.3.2",
-        "vue-qrcode": "^2.2.2",
         "vue-router": "^4.4.0",
         "vue3-quill": "^0.3.1"
     },
