--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "vue": "^3.4.34",
         "vue-chartjs": "^5.3.2",
         "vue-router": "^4.4.0",
-        "vue3-quill": "^0.3.1"
+        "vue3-quill": "^0.3.1",
+        "yarn": "^1.22.22"
     },
     "devDependencies": {
         "@primevue/auto-import-resolver": "^4.3.1",
