SIde Nav bar, path checking

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
         "@primeuix/themes": "^1.0.0",
         "@primevue/themes": "^4.3.9",
         "axion": "^0.1.0",
-        "axios": "^1.12.2",
+        "axios": "^1.13.2",
         "chart.js": "^4.1.1",
+        "pinia": "^3.0.4",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.9",
         "qrcode.vue": "^3.6.0",
