--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.13.2",
         "chart.js": "^4.1.1",
         "pinia": "^3.0.4",
+        "pinia-plugin-persistedstate": "^4.7.1",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.9",
         "qrcode.vue": "^3.6.0",
