--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-chartjs": "^5.3.2",
         "vue-router": "^4.4.0",
         "vue3-quill": "^0.3.1",
+        "xlsx": "^0.18.5",
         "yarn": "^1.22.22"
     },
     "devDependencies": {
